server: - modified enriched logging in core-socket-server so that logging within the authentication middleware function is consistent with other log entries - resolved failure of 'logger' to write single-line messages to the on-disk logs - added support for gameDataRequests - newGameRequests now return an integrated game data object instead of composing the response portal - state-machine-module store gets existing data from server as soon as it connects - made gridlines on game board invisible

--- a/game-portal-site/src/styles/main.scss
+++ b/game-portal-site/src/styles/main.scss
@@ -97,6 +97,7 @@ blockquote {
               path.grid-lines {
                 stroke-width: 1px;
                 stroke: $border-color;
+                stroke: none;
               }
             }
           }
